Fix #119992: Object transform ignored for shrinkwrap and flat shading

the transform was always ignored for face normals since b4b224dc083c0e490eeb.

Pull Request: https://projects.blender.org/blender/blender/pulls/120467